feat: ajout de la gestion du jwt
